# bonde-router

./: .env.example  .gitignore  Dockerfile  README.md  caddy.json  check_domains.py  check_domains_cli.py  conftest.py  dns_cli.py  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml
caddy_api/: .env.example  api.py  auth.py  settings.py
caddy_api/manager/: caddy_utils.py  celery_app.py  redis_client.py  tasks.py
dns_api/: api.py  db.py  route53.py  settings.py
tests/: test_api.py  test_api_healthcheck.py  test_api_hosted_zones.py
tests_dns/: test_api_healthcheck.py  test_api_hosted_zones.py  test_database.py
tests_traefik/: test_api_traefik.py
traefik_api/: api.py  models.py
